# dreaming-llms

./: .gitignore  README.md  agent.py  dream.py  main.py  pyproject.toml  tools.py  wifi_scan.py
sonos_remote/: README.md  pyproject.toml
sonos_remote/src/sonos_remote/: __init__.py
