[project]
name = "dreaming-llm"
version = "0.1.0"
description = "A minimal coding agent that dreams — it reflects on past conversations and distills reusable skills into long-term memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.8",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
]
