[project]
name = "sonos-remote"
version = "0.1.0"
description = "CLI to discover and control Sonos speakers on your local network"
readme = "README.md"
authors = [
    { name = "mahithsc", email = "mahith.chitrapu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "soco>=0.30.14",
]

[project.scripts]
sonos-remote = "sonos_remote:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
